spacing fix

--- a/app/assets/stylesheets/mobile/dashboard.scss
+++ b/app/assets/stylesheets/mobile/dashboard.scss
@@ -1,5 +1,6 @@
 .dashboard.mobile {
   width: 100%;
+  margin: 0;
 
   .logo {
     text-align: center;
